--- a/style.css
+++ b/style.css
@@ -149,7 +149,13 @@ p {
 
 
 
-
+.descargarcv{
+  position: fixed;
+    top: 30px; /* ajusta esta propiedad según la distancia desde la parte superior */
+    right: 90px; 
+    font-size: 30px;
+    color: #e91e63;
+}
 
 
 
