cambio español ingles, cambio letra blanca por violesta

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ canvas {
   font-family: "Monoton", cursive;
   color: #fff;
   font-size: 45px;
+  color: #e91e63;
 
 }
 
@@ -132,6 +133,7 @@ p {
 
 .p-tecnologias{
   font-size: 25px;
+  text-align: center;
 
 }
 
