--- a/style.css
+++ b/style.css
@@ -54,8 +54,9 @@ canvas {
 .logo {
   font-family: "Monoton", cursive;
   color: #fff;
-  font-size: 45px;
+  font-size: 49px;
   color: #e91e63;
+
 
 }
 
@@ -130,11 +131,14 @@ p {
   padding: 80px;
 }
 
-
 .p-tecnologias{
-  font-size: 25px;
+  padding: 0px;
   text-align: center;
-
+  font-size: 25px; /* Ajusta el tamaño del texto según sea necesario */
+  text-transform: uppercase; /* Convierte el texto a mayúsculas */
+  font-weight:bold; /* Puedes ajustar el peso de la fuente según sea necesario */
+  animation: rotateLetters 4s ease-in-out infinite alternate;
+  text-shadow: 15px 15px 15px rgba(4, 9, 9, 8);
 }
 
 .li{
@@ -219,3 +223,38 @@ textarea {
   font-weight:700;
 }
 [type="submit"]:hover { background:#CC4949; }
+
+
+
+
+.image-rotator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 145px;
+  overflow: hidden;
+}
+
+.image-rotator img {
+  width: 90px; /* Ajusta el tamaño según sea necesario */
+  height: 90px;
+  margin: 0px 30px;
+  border-radius: 20%;
+  animation: rotate 8s linear infinite alternate;
+}
+
+@keyframes rotate {
+  0% { transform: rotate(0deg) scale(1); }
+  100% { transform: rotate(360deg) scale(1.2); }
+}
+
+
+
+@keyframes rotateLetters {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
+}
