--- a/style.css
+++ b/style.css
@@ -137,12 +137,14 @@ p {
   font-size: 25px; /* Ajusta el tamaño del texto según sea necesario */
   text-transform: uppercase; /* Convierte el texto a mayúsculas */
   font-weight:bold; /* Puedes ajustar el peso de la fuente según sea necesario */
-  animation: rotateLetters 4s ease-in-out infinite alternate;
+  animation: rotateLetters 10s ease-in-out infinite alternate;
   text-shadow: 15px 15px 15px rgba(4, 9, 9, 8);
 }
 
 .li{
   color: #e91e63;
+  font-size: 40px;
+  
   
   
 }
@@ -240,7 +242,7 @@ textarea {
   height: 90px;
   margin: 0px 30px;
   border-radius: 20%;
-  animation: rotate 8s linear infinite alternate;
+  animation: rotate 15s linear infinite alternate;
 }
 
 @keyframes rotate {
@@ -256,5 +258,37 @@ textarea {
   }
   100% {
     transform: rotateY(180deg);
+  }
+}
+
+
+
+
+
+
+
+
+
+.animacion {
+  overflow: hidden; /* Oculta las letras que aún no han aparecido */
+  white-space: nowrap; /* Evita que las letras se rompan en múltiples líneas */
+  position: relative; /* Permite posicionar el contenido absoluto dentro de este elemento */
+}
+
+.animacion::after {
+  content: attr(data-text); /* Usa el atributo data-text para mostrar el texto */
+  position: absolute; /* Posiciona el contenido absoluto dentro del elemento .animacion */
+  top: 0;
+  left: 0;
+  color: black; /* Inicialmente, el texto es transparente */
+  animation: aparecer 1s forwards; /* Aplica la animación aparecer con una duración de 1 segundo */
+}
+
+@keyframes aparecer {
+  0% { /* Al inicio de la animación */
+    color: transparent; /* El texto es transparente */
+  }
+  100% { /* Al final de la animación */
+    color: inherit; /* El texto es visible */
   }
 }
