--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ canvas {
   color: #fff;
   font-size: 49px;
   color: #e91e63;
+  
 
 
 }
@@ -306,4 +307,34 @@ bottom: 0px;
 .footerlogo a {
   pointer-events: none; /* Deshabilita los eventos del puntero */
   cursor: default; /* Cambia el cursor a uno predeterminado */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.difuminado {
+  opacity: 0;
+  white-space: nowrap; /* Evita el salto de línea */
+  overflow: hidden; /* Oculta el texto que sobresale */
+  animation: aparecer 5s ease-out 2s forwards; /* Nombre de la animación, duración, tipo de curva de la animación, retraso y retención de la última posición de la animación */
+}
+
+@keyframes aparecer {
+  from {
+    width: 0; /* Comienza sin ancho */
+  }
+  to {
+    width: auto; /* Termina con el ancho natural del texto */
+    opacity: 1; /* Se vuelve completamente visible */
+  }
 }
